--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_form_builder: 7.1.1
+  intl: ^0.17.0
+  form_builder_validators: ^8.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
