--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   flutter_form_builder: 7.1.1
   intl: ^0.17.0
   form_builder_validators: ^8.1.1
+  sqflite: ^2.0.2
+  path: ^1.8.0
+  path_provider: ^2.0.9
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
