--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.0.2
   path: ^1.8.0
   path_provider: ^2.0.9
+  flutter_screenutil: ^5.5.3+2
 
 dev_dependencies:
   flutter_test:
